--- a/VRChat/26/1343026.html
+++ b/VRChat/26/1343026.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sDOMYpAm2bm6jxjOO7wdiOgD/MMuU1w3u6IRbDGIzlo="></script>
+    "SiRJahM+fCIK8YPP0pYLyBH0SaLCMYT1AtJaZ034iPw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"黒猫ヘアピン","description":"僕が使っている黒猫ヘアピンになります！\nテクスチャは真っ黒のものを入れております！\n内容はfbxとユニティーパッケージ、真っ黒のテクスチャが入っております\n\n〇再配布、自作発言は不可です。その他改変等々ご自由にお使いください。\n　商用、非商用問わず改変、使用可能です！\n\n\n☆使い方\ncameraとlampの設定がそのままなので削除してください。\nサイズは大きく作ってあるのでスケールで大きさを調整して位置を合わせるといいです！\nヘアピン自体をそのままheadのアーマチュア以下に配置すると頭に追従します！\n\n","url":"https://booth.pm/ja/items/1343026","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/666e62ef-0c7a-4c8c-80d6-ec47e3e9587f/i/1343026/2f3b5cba-b078-41ed-b3ce-5f6f5fea5289_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sDOMYpAm2bm6jxjOO7wdiOgD/MMuU1w3u6IRbDGIzlo="></script>
+    nonce="SiRJahM+fCIK8YPP0pYLyBH0SaLCMYT1AtJaZ034iPw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1343026/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               193
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1343026/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               193
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
