--- a/VRChat/39/1343639.html
+++ b/VRChat/39/1343639.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "s2a8d667sjzKCU8+715A28yfnkba/c3lMAAN/0lr7y4="></script>
+    "zbpE8ktkD7u5lBYen4mD+eYpA/dad5/bbelLu3H7AHU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「ぽてこ」","description":"■モデル説明\n本モデルはHumanoid形式のオリジナル３Dモデル『ぽてこ』\"POTEKO\"です。\nVRchatでの使用を想定しています。\n\nポニーテールのヒトガタの子です。\n\n\n※フルボディトラッキングでの動作は確認しておりません\nLip Sync：20種　　MMD（あいうえお）+VRChat標準（15種）\nEyeTracking対応ダミーシェイプ付き\nDynamic Bone対応（髪、耳、胸、尻尾）\n・表情アニメーションオーバーライド7種\n　設定済み\n・瞬きアニメーション設定済み\n・その他表情モーフあり\n・Dynamic bone 　設定済\n・Arktoon-Shaders　設定済\n・VRCSDK　設定済\n\n【同梱ファイル】\n・Arktoon-Shaders(Synqark様)\nアニメ調のシェーダーです。BOOTにて公開中です。\nhttps://booth.pm/ja/items/1027997\n使い方→ https://synqark.github.io/Arktoon-Shaders-Doc/\n\n■内容物\nモデルファイル(.blend + .fbx)\nUnityパッケージファイル(.unitypackage)\nテクスチャファイル(.png)\nREADME（利用規約）+更新履歴","url":"https://booth.pm/ja/items/1343639","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1343639/73bc0b26-43e3-4d77-89be-2f6aed5bb1bc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="s2a8d667sjzKCU8+715A28yfnkba/c3lMAAN/0lr7y4="></script>
+    nonce="zbpE8ktkD7u5lBYen4mD+eYpA/dad5/bbelLu3H7AHU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1343639/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               655
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1343639/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               655
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
