--- a/VRChat/38/1343238.html
+++ b/VRChat/38/1343238.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Lx2bOaAbSRPlm0Wuo3oxlMSv0tUMPPrUsL+7xS6IhPw="></script>
+    "qnYrWD1rSMVwn6Qh8ceJ10H9MjGNhiddVlWAg0usXww="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キラー、マグナムキラー(大)、ボム兵（スーパーマリオ）おまけつき","description":"追記\nおまけでノコノコをつけました。\n適当に使ってください。\n\n===================================\n\nスーパーマリオシリーズ\nキラー、キラー大（マグナムキラー）、ボムをセットにしています。\n\nVRChatやクリスタなどの二次創作にどうぞ。\n\n○内容物\n・キラー：\n　　体　　512ポリゴン\n　　片手　439ポリゴン\n・キラー大（マグナムキラー）：\n　　1400ポリゴン\n・ボム兵\n　　体　　1644ポリゴン\n　　片足　602ポリゴン\n\nテクスチャサイズは1024x1024px。\n\nfbxファイルのほかblendファイル(バージョン2.79版)も同梱してます。\n結合前やモディファイア前のオブジェクトも別レイヤにあるので加工したい場合はご自由にどうぞ。\n\n\n--------------------\n\n【利用規約】\n下記の利用規約に同意した場合にのみ購入してください。\n\n可能なこと\n・VRChatやゲーム等への組み込み\n・xR、メタバース上での利用\n・そのほか動画や静止画への利用（公開、販売含む）\n・モデルの改造\n\n禁止すること\n・当データをBOOTHや他のサイト、またはメディアで3Dデータとして販売すること。\n　（無償提供も含む）\n・NFTとしての販売\n・その他商用利用\n\n免責\n・このモデルを利用することで発生した問題について当方は一切の責任を負いません。\n","url":"https://booth.pm/ja/items/1343238","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d641cff2-c5ca-40b4-9130-5e88a73e9182/i/1343238/693c6989-3417-483a-ab1f-58bd9272df70_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Lx2bOaAbSRPlm0Wuo3oxlMSv0tUMPPrUsL+7xS6IhPw="></script>
+    nonce="qnYrWD1rSMVwn6Qh8ceJ10H9MjGNhiddVlWAg0usXww="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1343238/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1343238/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
