--- a/VRChat/87/1343187.html
+++ b/VRChat/87/1343187.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "840ge7GlTcQsHl89h92VW9yDP91PLHGfjB9ExED/lFY="></script>
+    "BHkoTsPWU1yLqFwUd8ThNWye++w1bZ2EiL6Y2C3d41E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スケルトンModel（女）","description":"YuDuKiTi式スケルトンちゃん\nポリゴン数を犠牲に美しい骨格の骨格美人さんになれました。\n女性骨格特融の骨盤形状と後仙骨孔、丸い頭部や細い骨が売り\n\nウエイトも男性骨格よりいい塗してます","url":"https://booth.pm/ja/items/1343187","offers":{"priceCurrency":"JPY","@type":"Offer","price":"540"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1343187/98a40c48-254f-4f96-8ee7-8d94cfc5fe1e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="840ge7GlTcQsHl89h92VW9yDP91PLHGfjB9ExED/lFY="></script>
+    nonce="BHkoTsPWU1yLqFwUd8ThNWye++w1bZ2EiL6Y2C3d41E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1343187/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1343187/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
