--- a/VRChat/28/1343128.html
+++ b/VRChat/28/1343128.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hlrPP4vk/tuA7yFSYHco6twtCyvVRVzVWmxEUDqqhuM="></script>
+    "k792kTMxSEM92KO4sdoO3x0lBaEhg903aaY53yZU1E0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"十字架型ブローチ","description":"VRChat用のアクセサリーです。\nまた、それ以外の用途にもご利用頂けます。\n\n内容：\nブローチ本体\nマテリアル2種類\n\n本モデルの改変は自由ですが著作権は『熊右衛門』にあります。\n再配布、販売は絶対におやめください。\n\n何かありましたら\nhttps://twitter.com/kumaemonhonpo78\nまでご連絡頂けると助かります。","url":"https://booth.pm/ja/items/1343128","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9fcdf65b-9eef-480e-a02b-6205f703f942/i/1343128/ad31eb50-c16a-466f-9eed-c1d2a2b1669d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hlrPP4vk/tuA7yFSYHco6twtCyvVRVzVWmxEUDqqhuM="></script>
+    nonce="k792kTMxSEM92KO4sdoO3x0lBaEhg903aaY53yZU1E0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1343128/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1343128/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
