--- a/VRChat/57/1343057.html
+++ b/VRChat/57/1343057.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RmOnyKI7Ia6v2hGtv1yubOB0ZQH5Va6uohpaEOpZnpk="></script>
+    "0Mb5kAAaLZ4lLhiQNhiUTydYtflGcqm/VKnT5T8pvcE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ヘアピン（クリップ）","description":"アバター用のアクセサリ―としてヘアピン（クリップ）を用意しました！","url":"https://booth.pm/ja/items/1343057","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3a74ad74-fcc2-4f1b-ba18-06e13af54c1f/i/1343057/ba0f85e8-2d4f-4614-b1e5-b0ea99784fa2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RmOnyKI7Ia6v2hGtv1yubOB0ZQH5Va6uohpaEOpZnpk="></script>
+    nonce="0Mb5kAAaLZ4lLhiQNhiUTydYtflGcqm/VKnT5T8pvcE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1343057/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1343057/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
