--- a/VRChat/52/1342652.html
+++ b/VRChat/52/1342652.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "08VDlDXRv04EyzzI7d7pDjkMDxSJjRzXxbHohB6+U7A="></script>
+    "WG2FAR/mzITsphyoUOQLcNg3ZVO7LKiMKSHTA6h5KdU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【 無料】三角帽子Tricorne「キャプテン」ーVRC向け3Ｄモデル","description":"VRChat向け3Dモデル\n\n「今日から、私はキャプテンになる」\n\nーーーーーーーーーーーーーーーーーーーーーーーーーーーー\n\n‐改変、改造　可\n‐world public avatar 可\n\n-再配布　禁止\n-宗教、政治、他人中傷を目的の利用　禁止\n\nーーーーーーーーーーーーーーーーーーーーーーーーーーーー\n注意：\n\n·ARKtoonを使います\n\n\n\n内容物：\nTricorne.fbx\nTricorne.unity\nTricorne.unitypackage\nTricorne.prefab\nTextureファイル\nMaterialsファイル\n説明.png","url":"https://booth.pm/ja/items/1342652","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c905a162-a49f-4411-90a6-10962a90af54/i/1342652/3f4df07e-85c0-4529-99a4-284e322131ce_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="08VDlDXRv04EyzzI7d7pDjkMDxSJjRzXxbHohB6+U7A="></script>
+    nonce="WG2FAR/mzITsphyoUOQLcNg3ZVO7LKiMKSHTA6h5KdU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342652/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               125
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342652/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               125
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
